k8s/istio-monitoring.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-services
  namespace: science-map-platform
spec:
  hosts:
  - redis.science-map.svc.cluster.local
  - postgres.science-map.svc.cluster.local
  - kafka.science-map.svc.cluster.local
  ports:
  - number: 6379
    name: redis
    protocol: TCP
  - number: 5432
    name: postgres
    protocol: TCP
  - number: 9092
    name: kafka
    protocol: TCP
  location: MESH_INTERNAL
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: custom-metrics
  namespace: science-map-platform
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.wasm
        typed_config:
          "@type": type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              name: custom_metrics
              root_id: custom_metrics_root
              configuration:
                "@type": type.googleapis.com/google.protobuf.StringValue
                value: |
                  {
                    "metrics": [
                      {
                        "name": "requests_total",
                        "type": "counter",
                        "labels": ["method", "path", "status"]
                      },
                      {
                        "name": "request_duration_seconds",
                        "type": "histogram",
                        "labels": ["method", "path"]
                      }
                    ]
                  }
